# ndarray-shuffle

./: Cargo.toml  README.md
benches/: shuffle_bench.rs
examples/: shuffle.rs
src/: lib.rs  shuffle.rs  shuffle_inplace.rs
